--- a/Ex3.html
+++ b/Ex3.html
@@ -11,17 +11,24 @@
 <body>
     <h1>Exercise 3: Calculate the sum of all numbers from 1 to a given number</h1>
     <script>
+        //Write a program to accept a number from a user and calculate the sum of all numbers from 1 to a given number
+        //For example, if the user entered 10 the output should be 55 (1+2+3+4+5+6+7+8+9+10)
 
         UserInput = prompt("Enter a number");
 
         let sum = 0
         for (let i = 0; i <= UserInput; i++) {
-            console.log(sum);
             sum += i;
 
         }
         
         document.write(sum);
+
+
+        /* Expected output:
+        Enter number 10
+        Sum is:  55
+        */
 
     </script>
 </body>
