--- a/Ex4.html
+++ b/Ex4.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise 4</title>
 </head>
+
 <body>
     <h1>Exercise 4: Write a program to print multiplication table of a given number</h1>
     <script>
-        
+        //For example, num = 2 so the output should be
+
         num = prompt("Enter a number");
 
         for (let i = 1; i <= 10; i++) {
             document.write(num * i + "<br>");
         }
 
+        /* Expected output:
+        2
+        4
+        6
+        8
+        10
+        12
+        14
+        16
+        18
+        20
+        */
     </script>
-    
+
 </body>
+
 </html>
