--- a/Ex12.html
+++ b/Ex12.html
@@ -27,9 +27,9 @@
 
         for (i = 0; i < 10; i++) {
             document.write(num1+" ");
-            res = num1+ num2;
+            sum = num1+ num2;
             num1 = num2;
-            num2 = res;
+            num2 = sum;
             
             
         }
